# vernier

./: CMakeLists.txt  README.md
examples/: analysingImage.cpp  bench.cpp  detectingHPCodePattern.cpp  detectingMegarenaPattern.cpp  detectingMegarenaPattern3D.cpp  detectingStampPattern.cpp  renderingPatternImage.cpp  roundtripMegarena.cpp
include/: BitmapPatternDetector.hpp  BufferedReader.hpp  Common.hpp  CudaPhaseEngine.hpp  Detector.hpp  FourierTransform.hpp  Layout.hpp  MegarenaPatternDetector.hpp  MegarenaPatternLayout.hpp  PatternDetector.hpp  PatternLayout.hpp  PatternPhase.hpp  PeriodicPatternDetector.hpp  PeriodicPatternLayout.hpp
python/: CMakeLists.txt  README.md  example.py  test_vernier.py  vernier_python.cpp
src/: BitmapPatternDetector.cpp  BitmapPatternLayout.cpp  BitmapThumbnail.cpp  BufferedReader.cpp  CMakeLists.txt  CudaPhaseEngine.cu  FourierTransform.cpp  HPCodePatternDetector.cpp  MegarenaPatternDetector.cpp  MegarenaPatternLayout.cpp  MegarenaThumbnail.cpp  PatternDetector.cpp  PatternLayout.cpp  PatternPhase.cpp  PeriodicPatternDetector.cpp  PeriodicPatternLayout.cpp  Pose.cpp  QRCodeDetector.cpp  Spectrum.cpp  StampPatternDetector.cpp  Utils.cpp
test/: TestFourierTransform.cpp  TestMegarenaPatternDetector.cpp  TestPatternLayout.cpp  TestPatternPhase.cpp  TestPeriodicPatternDetector.cpp  TestQRCodeDetector.cpp  TestQRFiducialDetector.cpp  TestSpatial.cpp  TestSquareDetector.cpp  testBitmapPatternDetector.cpp  testHPCodePatternDetector.cpp  testPatternRendering.cpp  testStampPatternDetector.cpp
